syntax = "proto3";

option java_package = "me.dantero.tunnelgame.common.proto";
option java_outer_classname = "Messaging";
option java_multiple_files = true;

option optimize_for = LITE_RUNTIME;

package me.dantero.tunnelgame.common.proto;

import "definitions.proto";

message JoinRequest {
    User user = 1;
    Server server = 2;
    int32 session_id = 3;
}

message Heartbeat {
    ServerInfo info = 1;
}


